# SteamAchievementNotifier

./: .gitignore  CUSTOMPRESETS.md  DEV.md  KNOWNISSUES.md  RA.md  README.md  REV 0.6 Updates.txt  SANUninstaller.ps1  SteamAchievementNotifier-SETUP.ps1  afterpack.js  appentry.js  beta.json  css.css  errwin.html  extwin.html  index.html  main.js  package-lock.json  package.json  preload.js  san.d.ts  san.js  san1.8.js  statwin.html  tooltip.js  tsconfig.json  version.json  zstart.cmd
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: import.js  index.html  main.js  main.rs  styles.css  updater.json
src-tauri/src/components/: accounts.html  achievements.js  config.js  customiser.css  customiser.html  dialog.css  dialog.html  extwin.html  keys.js  log.html  notify.js  poswin.html  pp.html  sanhelper.js  settings.css  settings.html  sound.js  ui.js
src-tauri/src/lang/: arabic.js  brazilian.js  bulgarian.js  czech.js  danish.js  dutch.js  english.js  finnish.js  french.js  german.js  greek.js  hungarian.js  italian.js  japanese.js  koreana.js  norwegian.js  polish.js  portuguese.js  romanian.js  russian.js  schinese.js  spanish.js  swedish.js  tchinese.js  thai.js  turkish.js  ukrainian.js  vietnamese.js
src-tauri/src/notify/: base.css  base.html  base.js  info.html  ss.html
src-tauri/src/notify/presets/[TEMPLATE]/: styles.css  template.html
src-tauri/src/notify/presets/default/: index.html  styles.css
src-tauri/src/notify/presets/epicgames/: index.html  styles.css
src-tauri/src/notify/presets/ps3/: index.html  styles.css
src-tauri/src/notify/presets/ps4/: index.html  styles.css
src-tauri/src/notify/presets/ps5/: index.html  styles.css
src-tauri/src/notify/presets/steamdeck/: index.html  styles.css
src-tauri/src/notify/presets/windows/: index.html  styles.css
src-tauri/src/notify/presets/xbox360/: index.html  styles.css
src-tauri/src/notify/presets/xboxone/: index.html  styles.css
src-tauri/src/notify/presets/xqjan/: index.html  styles.css
src-tauri/src/plugins/fs-extra/: index.min.js  index.min.js.map
src-tauri/src/plugins/snapshot/: CHANGELOG.md  Cargo.toml  LICENSE  README.md  package.json
src-tauri/src/plugins/snapshot/.github/workflows/: covector-version-or-publish.yml  format.yml  test.yml
src-tauri/src/plugins/snapshot/example/: index.html  package.json  pnpm-lock.yaml
src-tauri/src/plugins/snapshot/src/: error.rs  lib.rs  plugin.rs  prelude.rs
src-tauri/src/plugins/snapshot/webview-dist/: index.d.ts  index.js  types.d.ts
src-tauri/src/plugins/snapshot/webview-src/: index.ts  tsconfig.json  types.ts
src-tauri/src/plugins/upload/: index.min.js  index.min.js.map
(+255 files in other folders)
